feat(NPC): Enhance NPC behavior and add supporting assets